--- a/src/main/java/mini/ui/BanHangJPanel.form
+++ b/src/main/java/mini/ui/BanHangJPanel.form
@@ -72,11 +72,11 @@
               </Group>
               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="lblPercent" max="32767" attributes="0"/>
-                  <Component id="lblTotal" alignment="0" max="32767" attributes="0"/>
-                  <Component id="lblMoney" alignment="0" min="-2" pref="81" max="-2" attributes="0"/>
+                  <Component id="lblTotal" max="32767" attributes="0"/>
+                  <Component id="lblPercent" alignment="0" pref="110" max="32767" attributes="0"/>
+                  <Component id="lblMoney" alignment="0" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
