--- a/src/main/java/mini/ui/QLLoaiSPJPanel.form
+++ b/src/main/java/mini/ui/QLLoaiSPJPanel.form
@@ -308,7 +308,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="18" style="1"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="T&#xea;nn S&#x1ea3;n Ph&#x1ea9;m"/>
+                    <Property name="text" type="java.lang.String" value="T&#xea;n S&#x1ea3;n Ph&#x1ea9;m"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtTenLoai">
